feat(l-02): add the resolution of the question H

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     - id: trailing-whitespace
     - id: check-yaml
     - id: check-added-large-files
+      args: ['--maxkb=50192']
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.40.0
     hooks:
